# mackerel-client-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yaml
src/: alert.rs  alert_group_setting.rs  authority.rs  aws_integration.rs  channel.rs  check_report.rs  client.rs  dashboard.rs  downtime.rs  entity.rs  error.rs  graph_annotation.rs  graph_definition.rs  host.rs  invitation.rs  lib.rs  macros.rs  metadata.rs  metric.rs  monitor.rs  name.rs  notification_group.rs  organization.rs  role.rs  service.rs  tests.rs  user.rs
