[package]
name = "mackerel_client"
version = "0.6.1"
authors = ["itchyny <itchyny@cybozu.co.jp>"]
description = "An API client library for Mackerel"
repository = "https://github.com/itchyny/mackerel-client-rs"
readme = "README.md"
license = "MIT"
keywords = ["api", "mackerel"]
categories = ["api-bindings"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
derivative = "2.2.0"
fixedstr = { version = "0.5.5", features = ["serde"] }
http = "0.2.12"
reqwest = { version = "0.11.27", features = ["json"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
serde_with = { version = "1.14.0", features = ["chrono"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.58"
typed-builder = "0.18.1"
url = "2.5.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
httptest = "0.15.5"
pretty_env_logger = "0.5.0"
rstest = "0.18.2"
